k8s/uptimekuma-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptimekuma-ingress
  namespace: lab
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - status.hl0.dev
    secretName: status-tls
  rules:
  - host: status.hl0.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: uptimekuma
            port:
              number: 3001
